--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
   <title>Blog preview card</title>
 
   <link rel="stylesheet" href="./css/normalize.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/main.css" />
-
 </head>
 <body>
+  <main>
+    <img src="./assets/images/illustration-article.svg" alt="HTML & CSS
+    foundations article" />
+    <p>Learning</p>
+    <p>Published 21 Dec 2023</p>
+  </main>
 </body>
 </html>
