Continuing designing mobile version

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <main>
-    <img src="./assets/images/illustration-article.svg" alt="HTML & CSS
+    <img class="blog-card-img" src="./assets/images/illustration-article.svg" alt="HTML & CSS
     foundations article" />
     <p>Learning</p>
     <p>Published 21 Dec 2023</p>
