Updating cart element

--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
   <main>
     <img class="blog-card-img" src="./assets/images/illustration-article.svg" alt="HTML & CSS
     foundations article" />
-    <p>Learning</p>
-    <p>Published 21 Dec 2023</p>
+    <p class="category">Learning</p>
+    <p class="published-date">Published 21 Dec 2023</p>
+    <p class="title">HTML & CSS foundations</p>
+    <p class="description">These languages are the backbone of every webiste,
+    defining structure, content, and presentation.</p>
+    <div>
+      <img class="author-img" src="./assets/images/image-avatar.webp" alt="Grep Hooper" />
+      <p class="author">Greg Hooper</p>
+    </div>
   </main>
 </body>
 </html>
