Styling author info

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class="title">HTML & CSS foundations</p>
     <p class="description">These languages are the backbone of every webiste,
     defining structure, content, and presentation.</p>
-    <div>
+    <div class="author-wrapper">
       <img class="author-img" src="./assets/images/image-avatar.webp" alt="Grep Hooper" />
       <p class="author">Greg Hooper</p>
     </div>
